--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "rxjs": "6.0.0-alpha.3",
+    "screenfull": "^4.2.0",
     "tf-react-cpn": "^2.2.1",
     "tf-utils": "^2.2.5"
   },
