--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "antd": "^3.13.2",
     "cropperjs": "^1.3.5",
+    "fetch-mock": "^7.3.3",
     "intl": "^1.2.5",
     "nprogress": "0.2.0",
     "react": "16.5.2",
