--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   "dependencies": {
     "antd": "^3.13.2",
     "cropperjs": "^1.3.5",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "draftjs-to-markdown": "^0.5.1",
     "fetch-mock": "^7.3.3",
     "intl": "^1.2.5",
     "nprogress": "0.2.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-intl": "^2.7.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
